--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .wrapper {
   background: linear-gradient(rgb(255, 192, 203), rgb(255, 100, 100));
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .table.my-table {
-  --bs-table-bg: ransparent;
+  --bs-table-bg: transparent;
 }
