--- a/style.css
+++ b/style.css
@@ -1,8 +1,24 @@
 /* .wrapper {
   background: linear-gradient(rgb(255, 192, 203), rgb(255, 100, 100));
-  /* min-height: 100vh; */
+  min-height: 100vh; 
 }
 
 .table.my-table {
   --bs-table-bg: transparent;
 } */
+.container {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.wrapper {
+  background: linear-gradient(
+    45deg,
+    #dd4814,
+    #77216f,
+    #5e2750,
+    #2c001e,
+    #aea79f,
+    #333333
+  );
+  color: aliceblue;
+}
